# restock-system

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  README.md
backend/: .coveragerc  .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260408_1500_initial.py  20260409_0935_add_allocation_snapshot.py  20260409_1700_add_scheduler_enabled.py  20260409_1710_add_login_attempt.py  20260410_0001_archive_uq_and_cleanup.py  20260410_0002_add_calc_enabled.py  20260410_1300_extend_zipcode_rule_operator.py  20260411_1000_cleanup_transient_order_detail_fetch_log.py  20260411_1500_zipcode_rule_between_operator.py  20260413_1830_extend_saihu_po_number_length.py  20260413_2230_allow_unmatched_product_listing.py  20260413_2330_drop_suggestion_t_ship.py  20260414_1300_extend_in_transit_out_record_fields.py  20260414_1500_add_restock_regions_to_global_config.py  20260414_2100_drop_suggestion_item_t_purchase.py  20260414_2300_add_dashboard_snapshot.py  20260414_2400_add_rbac_tables.py  20260415_0653_in_transit_record_fk_ondelete_set_null.py  20260416_1700_add_order_page_indexes.py  20260418_0900_redesign_to_export_model.py  20260419_0000_grant_export_and_config_view_to_business_role.py  20260420_0900_split_procurement_restock_and_eu_mapping.py  20260422_1000_suggestion_item_purchase_qty_ge_zero.py  20260423_1000_retention_support.py  20260423_1100_add_restock_dates.py  20260423_1100_restock_dates_compat_marker.py  20260424_0100_drop_purchase_date_compat_marker.py  20260424_0100_drop_purchase_date_from_suggestions.py  20260425_1420_restore_purchase_date_columns.py  20260427_1200_api_call_retry_queue.py  20260427_1800_add_sku_mapping_rules.py  20260428_1000_add_order_source_platform.py  20260502_0900_add_sku_mapping_group_no.py  20260503_1000_add_commodity_master.py  20260503_1500_allow_shared_sku_mapping_components.py  20260503_1700_use_package_order_source.py  20260504_1000_enable_existing_sku_configs.py  20260504_1400_add_physical_item_groups.py  20260504_1600_drop_physical_item_primary_sku.py  20260504_1800_add_order_platform_purchase_index.py  (+1 more)
backend/app/: config.py  main.py
backend/app/api/: auth.py  auth_roles.py  auth_users.py  config.py  data.py  deps.py  metrics.py  monitor.py  snapshot.py  suggestion.py  sync.py  task.py
backend/app/core/: commodity_id.py  countries.py  country_mapping.py  exceptions.py  locks.py  logging.py  middleware.py  permission_cache.py  permission_sync.py  permissions.py  query.py  rate_limit.py  restock_regions.py  security.py  timezone.py
backend/app/db/: base.py  session.py
backend/app/engine/: calc_engine_job.py  context.py  runner.py  sku_mapping.py  step1_velocity.py  step2_sale_days.py  step3_country_qty.py  step4_total.py  step5_warehouse_split.py  step6_timing.py  zipcode_matcher.py
backend/app/models/: __init__.py  access_token.py  api_call_log.py  commodity.py  dashboard_snapshot.py  excel_export_log.py  global_config.py  in_transit.py  inventory.py  login_attempt.py  order.py  overstock.py  permission.py  physical_item.py  product_listing.py  role.py  role_permission.py  shop.py  sku.py  sku_mapping.py  suggestion.py  suggestion_snapshot.py  sync_state.py  sys_user.py  task_run.py  warehouse.py  zipcode_rule.py
backend/app/pushback/: purchase.py
backend/app/saihu/: client.py  marketplace.py  rate_limit.py  sign.py  token.py
backend/app/schemas/: auth.py  config.py  data.py  suggestion.py  suggestion_snapshot.py  sync.py
backend/tests/: conftest.py
(+437 files in other folders)
